@@ -1,3 +1,8 @@
+2009-02-06  Mark Ellis <mark@mpellis.org.uk>
+
+	* added synce-unlock.py, script to unlock a device
+	  from the command line
+
 2009-01-26  Mark Ellis <mark@mpellis.org.uk>
 
 	* 0.13.1 release
